--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "db:migrate": "prisma migrate dev --name init",
     "build": "tsc && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "nedb-promises": "^6.2.3",
     "@prisma/client": "^5.18.0",
     "cors": "^2.8.5",
     "express": "^4.22.1",
     "multer": "^2.0.2",
+    "nedb-promises": "^6.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "prisma": "^5.18.0",
     "@eslint/js": "^9.17.0",
     "@types/multer": "^2.0.0",
     "@types/react": "^18.3.18",
@@ -34,8 +34,10 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
