--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^2.0.2",
     "nedb-promises": "^6.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
